<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.imrafaelmerino</groupId>
  <artifactId>java-fun</artifactId>
  <packaging>jar</packaging>
  <version>0.8</version>
  <name>java8-fun</name>
  <description>Some patterns and idioms from Functional Programming implemented in Java</description>
  <url>https://github.com/imrafaelmerino/java-fun</url>
  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <developers>
    <developer>
      <id>imrafaelmerino</id>
      <name>Rafael Merino García</name>
      <email>imrafael.merino@gmail.com</email>
    </developer>
  </developers>
  <scm>
    <url>https://github.com/imrafaelmerino/java-fun.git</url>
  </scm>
  <properties>
    <NEXUS-STAGING-MAVEN-PLUGIN.VERSION>1.6.12</NEXUS-STAGING-MAVEN-PLUGIN.VERSION>
    <MAVEN-GPG-PLUGIN.VERSION>1.6</MAVEN-GPG-PLUGIN.VERSION>
    <MAVEN-SOURCE-PLUGIN.VERSION>3.0.1</MAVEN-SOURCE-PLUGIN.VERSION>
    <project.build.sourceEncoding>UTF8</project.build.sourceEncoding>
    <MAVEN-COMPILER-PLUGIN.VERSION>3.10.1</MAVEN-COMPILER-PLUGIN.VERSION>
    <MAVEN-COMPILER-PLUGIN.SOURCE>1.8</MAVEN-COMPILER-PLUGIN.SOURCE>
    <MAVEN-COMPILER-PLUGIN.TARGET>1.8</MAVEN-COMPILER-PLUGIN.TARGET>
    <MAVEN-SUREFIRE-PLUGIN.VERSION>3.0.0-M6</MAVEN-SUREFIRE-PLUGIN.VERSION>
    <MAVEN-JAR-PLUGIN.VERSION>3.2.2</MAVEN-JAR-PLUGIN.VERSION>
    <MONGODB-DRIVER-SYNC.VERSION>4.0.0</MONGODB-DRIVER-SYNC.VERSION>
    <MONGO-VALUES-VERSION>0.6</MONGO-VALUES-VERSION>
    <MAVEN-JAVADOC-PLUGIN.VERSION>3.3.2</MAVEN-JAVADOC-PLUGIN.VERSION>
    <SLF4J-API.VERSION>1.7.36</SLF4J-API.VERSION>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.7.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <version>${MAVEN-COMPILER-PLUGIN.VERSION}</version>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${MAVEN-COMPILER-PLUGIN.SOURCE}</source>
          <target>${MAVEN-COMPILER-PLUGIN.TARGET}</target>
          <showWarnings>true</showWarnings>
          <encoding>${project.build.sourceEncoding}</encoding>
          <compilerArgs>
            <arg>-Xlint:all</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${MAVEN-SUREFIRE-PLUGIN.VERSION}</version>

      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${MAVEN-JAR-PLUGIN.VERSION}</version>
        <configuration>
          <archive>
            <manifestEntries>
              <Automatic-Module-Name>java_fun</Automatic-Module-Name>
            </manifestEntries>
          </archive>
        </configuration>
          <executions>
              <execution>
                  <id>package-model</id>
                  <phase>package</phase>
                  <goals>
                      <goal>jar</goal>
                  </goals>
                  <configuration>
                      <classifier>jdk8</classifier>
                      <includes>
                          <include>**/**</include>
                      </includes>
                  </configuration>
              </execution>
          </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${MAVEN-JAVADOC-PLUGIN.VERSION}</version>
        <configuration>
            <source>8</source>
            <classifier>jdk8-javadoc</classifier>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>local</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <distributionManagement>
        <repository>
          <id>releases</id>
          <name>Repositorio de releases</name>
          <url>http://127.0.0.1:8081/repository/maven-releases/</url>
        </repository>
        <snapshotRepository>
          <id>snapshots</id>
          <name>Repositorio de snapshots</name>
          <url>http://127.0.0.1:8081/repository/maven-snapshots/</url>
        </snapshotRepository>
      </distributionManagement>
    </profile>
    <profile>
      <id>release</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <distributionManagement>
        <snapshotRepository>
          <id>ossrh</id>
          <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
          <id>ossrh</id>
          <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
      </distributionManagement>
      <build>
        <plugins>
          <plugin>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>nexus-staging-maven-plugin</artifactId>
            <version>${NEXUS-STAGING-MAVEN-PLUGIN.VERSION}</version>
            <extensions>true</extensions>
            <configuration>
              <serverId>ossrh</serverId>
              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
              <autoReleaseAfterClose>true</autoReleaseAfterClose>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>${MAVEN-GPG-PLUGIN.VERSION}</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>${MAVEN-SOURCE-PLUGIN.VERSION}</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
